# Aiathenachatbot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
deploy/: cloudbuild.yaml  compute-engine.sh  deploy.sh
src/aiathena/: __init__.py  agent.py  client.py  config.py  secrets.py  server.py
